<resources>
    <string name="app_name">Exercicios</string>
    <string name="singup">Não tem uma conta? Cadastre-se!</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="login">Entrar</string>
    <string name="error_password">Nome de usuário ou senha inválidos</string>
    <string name="body_main">O que vamos treinar hoje?</string>
    <string name="new_exercise">Novo Exercício</string>
    <string name="historic">Histórico</string>
    <string name="title_activity_exercise">Map</string>
    <string name="init">Iniciar</string>
    <string name="allright">Tudo pronto?</string>
    <string name="distance">Distância(km)</string>
    <string name="elevation">Elevação(m)</string>
    <string name="steps">Passos</string>
    <string name="new_account">Nova Conta</string>
    <string name="cancel">Cancelar</string>
    <string name="lets_go">Vamos começar!</string>
    <string name="name">Nome</string>
    <string name="error_singup">Parece que você se esqueceu de algum campo</string>
    <string name="end_exercise">Encerrar</string>
    <string name="info_exercise">--------Detalhes do exercício--------</string>
    <string name="duration">Duração:</string>
    <string name="kcal">Calorias:</string>
    <string name="steps_exercise">Passos:</string>
    <string name="min_elevation">Menor elevação:</string>
    <string name="max_elevation">Maior elevação:</string>
    <string name="bpm">Frequência cardíaca:</string>
    <string name="save">Salvar</string>
    <string name="exercise_0">Caminhada</string>
    <string name="exercise_1">Corrida</string>
    <string name="exercise_2">Escalada</string>
    <string name="exercise_3">Aeróbica</string>
    <string name="no_content">n/a</string>
    <string name="user_size">Peso (kg)</string>
    <string name="recovery_error">Erro ao recuperar exercício</string>
    <string name="save_success">Feito!</string>
    <string name="save_success_body">Seu exercício foi salvo com sucesso.</string>
    <string name="error_save_exercise_body">Erro ao salvar exercício.</string>
    <string name="error_create_user">Erro ao criar usuário</string>
    <string name="distance_historic">Distância(km):</string>
    <string name="filter">Filtros:</string>
    <string name="delete_body">Deseja excluir este exercício?</string>
</resources>
